2009-05-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	parallel-tests: avoid GNU make 3.80 substitution bug.
	* lib/am/check.am [PARALLEL_TESTS] (check-TESTS): Remove any
	`.log' entries from `$(TEST_LOGS)' even if the list is nonempty,
	to work around GNU make 3.80 substitution reference issue with
	trailing white space in the variable.
	* tests/parallel-tests10.test: New test.
	* tests/parallel-tests6.test: Update comment.
	* tests/Makefile.am: Update.
	* NEWS: Update.
	Report by Bob Friesenhahn.

2009-05-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	testsuite: unset installation directory variables.
	* tests/defs.in: Before test execution, be sure to unset all
	installation directory variables, so they cannot have an effect
	on a `make -e install' command within a test.
	Report by Dagobert Michelsen.

	testsuite: do not change the mode of installed Libtool files.
	* tests/defs.in: Do not use `chmod -R' on the test directory, as
	that may change or try to change the mode of installed files:
	the test directory may contain symlinks to ltmain.sh files from
	a Libtool installation, and Solaris `chmod -R' touches symlink
	targets.  Instead, use the cleanup strategy used in distdir.am.
	* NEWS: Update.
	Report by Dagobert Michelsen.

	testsuite: do not fail in cleanup code.
	* tests/defs.in: Turn off errexit in the cleanup trap, to avoid
	a test failure due to a nonzero command.
	* THANKS: Update.
	Report by Dagobert Michelsen.

2009-05-23  Peter O'Gorman  <peter@pogma.com>

	python: do not install in system directories on Darwin 9.
	On Darwin 9, get_python_lib returns a path below `/Library/Python'
	regardless of the `prefix' argument it was passed, causing `make
	install' to target the system directories regardless of `--prefix'
	argument used.  Work around this Darwin bug by ignoring the result
	of get_python_lib if it points outside of the passed prefix, and
	the prefix was not a system directory.