@@ -129,6 +129,7 @@ Ian Lance Taylor	ian@cygnus.com
 Илья Н. Голубев		gin@mo.msk.ru
 Imacat			imacat@mail.imacat.idv.tw
 Inoue			inoue@ainet.or.jp
+Jack Kelly		endgame.dos@gmail.com
 James Amundson		amundson@users.sourceforge.net
 James Henstridge	james@daa.com.au
 James R. Van Zandt	jrv@vanzandt.mv.com
