@@ -1,3 +1,11 @@
+2009-05-24  Jack Kelly  <endgame.dos@gmail.com>  (tiny change)
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	AM_PROG_GCJ currently fails to define OBJEXT and EXEEXT.
+	* tests/gcj6.test: New test.
+	* tests/Makefile.am: Update; mark gcj6.test as XFAIL.
+	* THANKS: Update.
+
 2009-05-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	parallel-tests: avoid GNU make 3.80 substitution bug.
